[B]Version 1.1.38[/B]
favorites - move up/down/top/bottom disabled when favorites list is sorted
favorites - video list refresh disabled on add
Paradisehill - fix videoplayback
FamilyPornHD - fix videoplayback
sextb - fix listing and playback on LE/CE
erome - New site
aagmaal - fix listing
aagmaal.pro - new site