@@ -7,3 +7,4 @@ sextb - fix listing and playback on LE/CE
 erome - New site
 aagmaal - fix listing
 aagmaal.pro - new site
+chaturbate - fix RTMP playback
